# SYNCRO

./: .env.example  .gitignore  AUDIT_LOGGING_README.md  BACKEND_DOCUMENTATION.md  CooldownRenewal.sol  CurrentState.md  DEBT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_AUDIT_SYSTEM.md  SOLUTION.md  SUMMARY.md  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  contracts.yml  generate-openapi.yml
.hardhat/cache/: solidity-files-cache.json
app/: layout.tsx  page.tsx
backend/: .env.example  ARCHITECTURE.md  README.md  README_REMINDER_ENGINE.md  SUBSCRIPTION_API.md  TELEGRAM_INTEGRATION_GUIDE.md  jest.config.js  package-lock.json  package.json  telegram-jest-result.json  tsconfig.json
backend/src/: index.ts  swagger.ts
backend/tests/: analytics-api.test.ts  error-taxonomy.test.ts  expiry-service.test.ts  expiry-utils.test.ts  monitoring-api.test.ts  monitoring-service.test.ts  redis-store.test.ts  reminder-engine-batch.test.ts  renewal-cooldown-service.test.ts  (+8 more)
client/: API_INFRASTRUCTURE_SUMMARY.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
contracts/: Cargo.toml  CooldownRenewal.sol  README.md
contracts/contracts/virtual-card/: Cargo.toml  Makefile
contracts/contracts/virtual-card/src/: lib.rs  test.rs
db/: schema.sql
docs/: timestamp-timezone-rules.md
scripts/: test-rls-audit.js
sdk/: package-lock.json  package.json
test/: CooldownRenewal.test.js
(+154 files in other folders)
